--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "geist": "^1.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.416.0",
     "next": "^14.2.4",
     "next-nprogress-bar": "^2.4.7",
@@ -50,6 +51,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-select": "^5.10.1",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
@@ -58,6 +60,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
